--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       }
     </style>
     <script src="https://cdn.jsdelivr.net/npm/@woowacourse/mission-utils@1.0.1/dist/mission-utils.min.js"></script>
+    <script type="module" src="src/index.js"></script>
   </head>
   <body>
     <div id="app"></div>
